[DOC] Swagger Docs for API Command Asset Maintenance & Asset Finding Module
