# docs/swagger.json
@@ -214,6 +214,66 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create an asset finding",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Post Create Asset Finding",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Finding Category",
+                        "name": "finding_category",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Finding Notes",
+                        "name": "finding_notes",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Finding Image (JPG,PNG,JPEG)",
+                        "name": "finding_image",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Asset Placement Id",
+                        "name": "asset_placement_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseCreateAssetFinding"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/v1/asset/finding/hour_total": {
@@ -238,6 +298,41 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/asset/finding/{id}": {
+            "delete": {
+                "description": "Permanentally delete asset finding by id",
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Delete Asset Finding By Id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of asset finding",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseDeleteAssetFindingById"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -278,6 +373,47 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "description": "Create an asset maintenance by Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Post Create Asset Maintenance By Id",
+                "parameters": [
+                    {
+                        "description": "Create Asset Maintenance Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.RequestCreateUpdateAssetMaintenance"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseCreateAssetMaintenance"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/v1/asset/maintenance/schedule": {
@@ -302,6 +438,89 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/asset/maintenance/{id}": {
+            "put": {
+                "description": "Create an asset maintenance by Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Put Update Asset Maintenance By Id",
+                "parameters": [
+                    {
+                        "description": "Put Update Asset Maintenance Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.RequestCreateUpdateAssetMaintenance"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Id of asset maintenance",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponsePutUpdateAssetMaintenance"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Permanentally delete asset maintenance by id",
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Delete Asset Maintenance By Id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of asset maintenance",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseDeleteAssetMaintenanceById"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -1148,6 +1367,36 @@
                 }
             }
         },
+        "entity.RequestCreateUpdateAssetMaintenance": {
+            "type": "object",
+            "required": [
+                "asset_placement_id",
+                "maintenance_by",
+                "maintenance_day",
+                "maintenance_hour_end",
+                "maintenance_hour_start"
+            ],
+            "properties": {
+                "asset_placement_id": {
+                    "type": "string"
+                },
+                "maintenance_by": {
+                    "type": "string"
+                },
+                "maintenance_day": {
+                    "type": "string"
+                },
+                "maintenance_hour_end": {
+                    "type": "string"
+                },
+                "maintenance_hour_start": {
+                    "type": "string"
+                },
+                "maintenance_notes": {
+                    "type": "string"
+                }
+            }
+        },
         "entity.RequestUpdateAssetById": {
             "type": "object",
             "required": [
@@ -1185,6 +1434,58 @@
                 "message": {
                     "type": "string",
                     "example": "asset created successfully"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "entity.ResponseCreateAssetFinding": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "asset finding created successfully"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "entity.ResponseCreateAssetMaintenance": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "asset maintenance created successfully"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "entity.ResponseDeleteAssetFindingById": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "asset finding deleted"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "entity.ResponseDeleteAssetMaintenanceById": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "asset maintenance deleted"
                 },
                 "status": {
                     "type": "string",
@@ -1513,6 +1814,19 @@
                 "message": {
                     "type": "string",
                     "example": "asset permanentally deleted"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "entity.ResponsePutUpdateAssetMaintenance": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "asset maintenance updated successfully"
                 },
                 "status": {
                     "type": "string",
